// Copyright 2023-2024 Ant Investor Ltd
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package notification.v1;

import "buf/validate/validate.proto";
import "common/v1/common.proto";

option go_package = "notificationv1";
option java_multiple_files = true;
option java_package = "com.antinvestor.api.notification";

// buf:lint:ignore ENUM_VALUE_PREFIX
enum PRIORITY {
  // buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
  HIGH = 0;
  LOW = 1;
  VERY_LOW = 2;
}

message Notification {
  string access_id = 1 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  string id = 2 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  string profile_id = 3 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,40}"
  ];

  oneof contact {
    option (buf.validate.oneof).required = true;
    string contact_id = 4 [
      (buf.validate.field).ignore_empty = true,
      (buf.validate.field).string.min_len = 3,
      (buf.validate.field).string.max_len = 40,
      (buf.validate.field).string.pattern = "[0-9a-z_-]{3,40}"
    ];
    string detail = 5 [
      (buf.validate.field).ignore_empty = true,
      (buf.validate.field).string.min_len = 3,
      (buf.validate.field).string.max_len = 250,
      (buf.validate.field).string.pattern = "[0-9a-z_-]{3,250}"
    ];
  }
  string type = 6;
  string template = 7;
  map<string, string> payload = 8;
  string data = 9;
  string language = 10;
  bool out_bound = 11;
  bool auto_release = 12;
  string route_id = 13 [
    (buf.validate.field).ignore_empty = true,
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  StatusResponse status = 14 [(buf.validate.field).skipped = true];
  map<string, string> extras = 15;

  PRIORITY priority = 16;
}

message SearchRequest {
  string query = 1;
  int64 page = 2;
  int32 count = 3;
  string start_date = 4;
  string end_date = 5;
  repeated string properties = 6;
  map<string, string> extras = 7;
}

message SearchResponse {
  repeated Notification data = 1;
}

message SendRequest {
  Notification data = 1;
}

message SendResponse {
  StatusResponse data = 1;
}

message StatusRequest {
  string id = 1 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  map<string, string> extras = 2;
}

message StatusResponse {
  string id = 1 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  common.v1.STATE state = 2;
  common.v1.STATUS status = 3;
  string external_id = 4;
  string transient_id = 5;
  map<string, string> extras = 6;
}

message StatusUpdateRequest {
  string access_id = 1 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  string id = 2 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  common.v1.STATE state = 3;
  common.v1.STATUS status = 4;
  string external_id = 5;
  map<string, string> extras = 6;
}

message StatusUpdateResponse {
  StatusResponse data = 1;
}

message ReleaseRequest {
  string access_id = 1 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  string id = 2 [
    (buf.validate.field).string.min_len = 3,
    (buf.validate.field).string.max_len = 40,
    (buf.validate.field).string.pattern = "[0-9a-z_-]{3,20}"
  ];
  string comment = 3;
}

message ReleaseResponse {
  StatusResponse data = 1;
}

message ReceiveRequest {
  Notification data = 1;
}

message ReceiveResponse {
  StatusResponse data = 1;
}

service NotificationService {
  //Send method for queueing massages as requested
  rpc Send(SendRequest) returns (SendResponse);

  //Status request to determine if notification is prepared or released
  rpc Status(StatusRequest) returns (StatusResponse);

  //Status update request to allow continuation of notification processing
  rpc StatusUpdate(StatusUpdateRequest) returns (StatusUpdateResponse);

  //Release method for releasing queued massages and returns if notification status if released
  rpc Release(ReleaseRequest) returns (ReleaseResponse);

  //Receive method is for client request for particular notification responses from system
  rpc Receive(ReceiveRequest) returns (ReceiveResponse);

  //Search method is for client request for particular notification details from system
  rpc Search(SearchRequest) returns (stream SearchResponse);
}
